# GenerativeAI

./: .gitignore  README.md
causalityiq/: requirements.txt
causalityiq/causalityiq_app/: analysis.py  app.py  data_summaries.py  debug_settings.py  incident_io.py  langgraph_flow.py  llm_client.py  logging_config.py  paths.py  reports.py  settings.py
causalityiq/causalityiq_app/models/: incident.py
causalityiq/config/: config.yaml
causalityiq_ui/: streamlit_app.py
project3-llm-rag-assistant/: config.yml  pyproject.toml
project3-llm-rag-assistant/data/resume/: rag_embeddings.npy  rag_index.parquet
project3-llm-rag-assistant/data/rfp/: eval_questions.csv  eval_results.csv  eval_samples.csv  rag_index.parquet
project3-llm-rag-assistant/data/tech_docs/: rag_embeddings.npy  rag_index.parquet
project3-llm-rag-assistant/docs/rfp/: rfp_illinois_15_rfp_01.txt  rfp_template_ACCC_RA_Aggregated_Off-site_Renewables_PPA_RFP_Template.docx
project3-llm-rag-assistant/docs/tech_docs/: 5.7 Technical Offer -  Smart Condition Monitroing System.docx
project3-llm-rag-assistant/src/: agent_langchain.py  agent_langgraph.py  config.py  eval.py  eval_rag.py  ingest.py  ingest_noconfigfileuse.py  rag_query.py  rag_query_noconfigfileuse.py  settings.py
project3-llm-rag-assistant/src/models/: base.py  factory.py  openai_client.py
project3-llm-rag-assistant/src/models.egg-info/: PKG-INFO  SOURCES.txt
project3-llm-rag-assistant/src/project3_llm_rag_assistant.egg-info/: SOURCES.txt  requires.txt
project3-rag-api-service/app/: api_server.py
project3-rag-streamlit-ui/: app.py
(+27 files in other folders)
